[package]
name = "podcasts"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]

[dependencies]
chrono = "0.4.9"
failure = "0.1.6"
failure_derive = "0.1.6"
lazy_static = "1.4.0"
mp3-duration = "0.1.6"
rayon = "1.2.0"
regex = "1.3.1"
reqwest = "0.9.22"
rss = "1.8.0"
# rss = { path = "../rss" }
select = "0.4.3"
time = "0.1.42"
url = "2.1.0"