[package]
name = "podcasts"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]

[dependencies]
chrono = "0.4.10"
failure = "0.1.6"
failure_derive = "0.1.6"
lazy_static = "1.4.0"
mp3-duration = "0.1.8"
rayon = "1.3.0"
regex = "1.3.3"
reqwest = "0.9.22"
rss = "1.8.0"
# rss = { path = "../rss" }
select = "0.4.3"
url = "2.1.1"
