[package]
name = "podcasts"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
color-eyre = "0.5.11"
failure = "0.1.7"
failure_derive = "0.1.7"
lazy_static = "1.4.0"
mp3-duration = "0.1.9"
rayon = "1.4.1"
regex = "1.3.5"
reqwest = { version = "0.11.4", features = ["blocking"] }
rss = "1.9.0"
# rss = { path = "../rss" }
select = "0.5.0"
serde_json = "1.0.48"
url = "2.1.1"

